--- a/devops/cross-account-vpc-peering-accepter.yml
+++ b/devops/cross-account-vpc-peering-accepter.yml
@@ -82,18 +82,16 @@ Resources:
         };
       MemorySize: 128
       Policies:
-        - AWSLambdaBasicExecutionRole
         - Statement:
-            - Action:
-                - ec2:ModifyVpcPeeringConnectionOptions
+            - Action: ec2:ModifyVpcPeeringConnectionOptions
               Effect: Allow
               Resource: "*"
           Version: "2012-10-17"
-      Runtime: nodejs14.x
+      Runtime: nodejs12.x
       Tags:
         Project: Admin
-        "prx:cloudformation:stack-name": !Ref AWS::StackName
-        "prx:cloudformation:stack-id": !Ref AWS::StackId
+        prx:cloudformation:stack-name: !Ref AWS::StackName
+        prx:cloudformation:stack-id: !Ref AWS::StackId
       Timeout: 30
   ModifyVpcPeeringConnectionOptionsFunctionLogGroup:
     Type: AWS::Logs::LogGroup
