--- a/stacks/provisioned.yml
+++ b/stacks/provisioned.yml
@@ -164,8 +164,8 @@ Resources:
         EcsClusterArn: !Ref EcsClusterArn
         VpcId: !Ref VpcId
         SecretsBase: !Ref SecretsBase
-        EcrImageTag: !Ref DovetailRouterEcrImageTag
-        SecretsVersion: !Ref DovetailRouterSecretsVersion
+        EcrImageTag: !Ref NetworksEcrImageTag
+        SecretsVersion: !Ref NetworksSecretsVersion
         EcrRegion: !Ref EcrRegion
         SecretsStackName: !Ref SecretsStackName
         NotificationsStackName: !Ref NotificationsStackName
