Fix Networks env vars

--- a/stacks/provisioned.yml
+++ b/stacks/provisioned.yml
@@ -14,23 +14,6 @@ Parameters:
   VpcId: { Type: "AWS::EC2::VPC::Id" }
   SecretsBase: { Type: String }
   EcrRegion: { Type: String }
-  PublishEcrImageTag: { Type: String }
-  PublishSecretsVersion: { Type: String }
-  MetricsEcrImageTag: { Type: String }
-  MetricsSecretsVersion: { Type: String }
-  IframelyEcrImageTag: { Type: String }
-  IframelySecretsVersion: { Type: String }
-  GroveEcrImageTag: { Type: String }
-  GroveSecretsVersion: { Type: String }
-  PlayEcrImageTag: { Type: String }
-  PlaySecretsVersion: { Type: String }
-  StyleguideEcrImageTag: { Type: String }
-  StyleguideSecretsVersion: { Type: String }
-  NetworksEcrImageTag: { Type: String }
-  NetworksSecretsVersion: { Type: String }
-  DovetailRouterEcrImageTag: { Type: String }
-  DovetailRouterSecretsVersion: { Type: String }
-
   SecretsStackName: { Type: String }
   NotificationsStackName: { Type: String }
   UploadSigningUserName: { Type: String }
@@ -39,6 +22,25 @@ Parameters:
   VpcPrivateSubnet1Id: { Type: "AWS::EC2::Subnet::Id" }
   VpcPrivateSubnet2Id: { Type: "AWS::EC2::Subnet::Id" }
   VpcPrivateSubnet3Id: { Type: "AWS::EC2::Subnet::Id" }
+  SharedMemcachedEndpointAddress: { Type: String }
+  SharedMemcachedEndpointPort: { Type: String }
+
+  PublishEcrImageTag: { Type: String } #
+  PublishSecretsVersion: { Type: String }
+  MetricsEcrImageTag: { Type: String } #
+  MetricsSecretsVersion: { Type: String }
+  IframelyEcrImageTag: { Type: String } #
+  IframelySecretsVersion: { Type: String }
+  GroveEcrImageTag: { Type: String } #
+  GroveSecretsVersion: { Type: String }
+  PlayEcrImageTag: { Type: String } #
+  PlaySecretsVersion: { Type: String }
+  StyleguideEcrImageTag: { Type: String } #
+  StyleguideSecretsVersion: { Type: String }
+  NetworksEcrImageTag: { Type: String } #
+  NetworksSecretsVersion: { Type: String }
+  DovetailRouterEcrImageTag: { Type: String } #
+  DovetailRouterSecretsVersion: { Type: String }
 
 Resources:
   DovetailRouterStack:
@@ -174,6 +176,10 @@ Resources:
         VpcPrivateSubnet1Id: !Ref VpcPrivateSubnet1Id
         VpcPrivateSubnet2Id: !Ref VpcPrivateSubnet2Id
         VpcPrivateSubnet3Id: !Ref VpcPrivateSubnet3Id
+        UploadSigningEndpointUrl: !Ref UploadSigningEndpointUrl
+        UploadSigningAccessKeyId: !Ref UploadSigningAccessKeyId
+        SharedMemcachedEndpointAddress: !Ref SharedMemcachedEndpointAddress
+        SharedMemcachedEndpointPort: !Ref SharedMemcachedEndpointPort
       Tags:
         - Key: Environment
           Value: !Ref EnvironmentType
