--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -786,6 +786,7 @@ Resources:
           Fn::ImportValue: !Sub ${NotificationsStackName}-OpsErrorMessagesSnsTopicArn
         EnvironmentType: !Ref EnvironmentType
         SourceSecurityGroupId1: !GetAtt ECSClusterStack.Outputs.ECSInstanceOutboundSecurityGroupId
+        AlbTargetInstanceSecurityGroupId: !GetAtt SharedAlbStack.Outputs.TargetInstanceSecurityGroupId
       Tags:
         - Key: prx:cloudformation:stack-name
           Value: !Ref AWS::StackName
@@ -932,6 +933,8 @@ Resources:
         VpcPrivateSubnet1Id: !GetAtt SharedVpcStack.Outputs.PrivateSubnet1Id
         VpcPrivateSubnet2Id: !GetAtt SharedVpcStack.Outputs.PrivateSubnet2Id
         VpcPrivateSubnet3Id: !GetAtt SharedVpcStack.Outputs.PrivateSubnet3Id
+        SharedMemcachedEndpointAddress: !GetAtt SharedMemcachedStack.Outputs.CacheEndpointAddress
+        SharedMemcachedEndpointPort: !GetAtt SharedMemcachedStack.Outputs.CacheEndpointPort
       Tags:
         - Key: Environment
           Value: !Ref EnvironmentType
