--- a/stacks/shared-memcached.yml
+++ b/stacks/shared-memcached.yml
@@ -22,6 +22,8 @@ Parameters:
     Type: String
   SourceSecurityGroupId1:
     Type: AWS::EC2::SecurityGroup::Id
+  AlbTargetInstanceSecurityGroupId:
+    Type: AWS::EC2::SecurityGroup::Id
 
 Conditions:
   CreateProductionResources: !Equals [!Ref EnvironmentType, Production]
@@ -43,6 +45,10 @@ Resources:
         - IpProtocol: tcp
           FromPort: 11211
           SourceSecurityGroupId: !Ref SourceSecurityGroupId1
+          ToPort: 11211
+        - IpProtocol: tcp
+          FromPort: 11211
+          SourceSecurityGroupId: !Ref AlbTargetInstanceSecurityGroupId
           ToPort: 11211
       Tags:
         - Key: Project
