--- a/stacks/provisioned/networks.yml
+++ b/stacks/provisioned/networks.yml
@@ -26,6 +26,10 @@ Parameters:
   VpcPrivateSubnet1Id: { Type: "AWS::EC2::Subnet::Id" }
   VpcPrivateSubnet2Id: { Type: "AWS::EC2::Subnet::Id" }
   VpcPrivateSubnet3Id: { Type: "AWS::EC2::Subnet::Id" }
+  UploadSigningEndpointUrl: { Type: String }
+  UploadSigningAccessKeyId: { Type: String }
+  SharedMemcachedEndpointAddress: { Type: String }
+  SharedMemcachedEndpointPort: { Type: String }
 
 Conditions:
   IsProduction: !Equals [!Ref EnvironmentType, Production]
@@ -52,6 +56,43 @@ Resources:
         - Key: prx:cloudformation:stack-id
           Value: !Ref AWS::StackId
       Type: network
+
+  SphinxSearchdTargetGroup:
+    Type: AWS::ElasticLoadBalancingV2::TargetGroup
+    DependsOn: Nlb
+    Properties:
+      HealthCheckIntervalSeconds: 10
+      HealthyThresholdCount: 3
+      Name: AppName-xxx-sx-VPC # TODO
+      Port: 9312
+      Protocol: TCP
+      TargetGroupAttributes:
+        - Key: deregistration_delay.timeout_seconds
+          Value: "30"
+      TargetType: ip
+      Tags:
+        - Key: Project
+          Value: AppName # TODO
+        - Key: Environment
+          Value: !Ref EnvironmentType
+        - Key: Name
+          Value: !Sub AppName-${EnvironmentType} # TODO
+        - Key: prx:cloudformation:stack-name
+          Value: !Ref AWS::StackName
+        - Key: prx:cloudformation:stack-id
+          Value: !Ref AWS::StackId
+      UnhealthyThresholdCount: 3
+      VpcId: !Ref VpcId
+  SphinxSearchdListener:
+    Type: AWS::ElasticLoadBalancingV2::Listener
+    Properties:
+      DefaultActions:
+        - TargetGroupArn: !Ref SphinxSearchdTargetGroup
+          Type: forward
+      LoadBalancerArn: !Ref Nlb
+      Port: 9312
+      Protocol: TCP
+
   # #####
 
   PublicWebHostHeaderListenerRule:
@@ -210,6 +251,14 @@ Resources:
               Value: !Ref SecretsVersion
             - Name: AWS_DEFAULT_REGION
               Value: !Ref AWS::Region
+            - Name: SIGNER_URL
+              Value: !Ref UploadSigningEndpointUrl
+            - Name: SIGNER_ACCESS_KEY
+              Value: !Ref UploadSigningAccessKeyId
+            - Name: MEMCACHED_PORT_11211_TCP_ADDR
+              Value: !Ref SharedMemcachedEndpointAddress
+            - Name: MEMCACHED_PORT_11211_TCP_PORT
+              Value: !Ref SharedMemcachedEndpointPort
           Essential: true
           Image: !Sub ${AWS::AccountId}.dkr.ecr.${EcrRegion}.amazonaws.com/networks.prx.org:${EcrImageTag}
           LogConfiguration:
