Use separate SG

--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -786,7 +786,10 @@ Resources:
           Fn::ImportValue: !Sub ${NotificationsStackName}-OpsErrorMessagesSnsTopicArn
         EnvironmentType: !Ref EnvironmentType
         SourceSecurityGroupId1: !GetAtt ECSClusterStack.Outputs.ECSInstanceOutboundSecurityGroupId
-        AlbTargetInstanceSecurityGroupId: !GetAtt SharedAlbStack.Outputs.TargetInstanceSecurityGroupId
+        AlbTargetInstanceSecurityGroupId: !If
+          - IsStaging
+          - !GetAtt SharedAlbStack.Outputs.TargetInstanceSecurityGroupId
+          - !Ref AWS::NoValue
       Tags:
         - Key: prx:cloudformation:stack-name
           Value: !Ref AWS::StackName
