--- a/stacks/shared-memcached.yml
+++ b/stacks/shared-memcached.yml
@@ -27,6 +27,7 @@ Parameters:
 
 Conditions:
   CreateProductionResources: !Equals [!Ref EnvironmentType, Production]
+  HasAlbSg: !Not [!Equals [!Ref AlbTargetInstanceSecurityGroupId, ""]]
 
 Resources:
   SharedMemcachedSubnetGroup:
@@ -46,6 +47,23 @@ Resources:
           FromPort: 11211
           SourceSecurityGroupId: !Ref SourceSecurityGroupId1
           ToPort: 11211
+      Tags:
+        - Key: Project
+          Value: platform.prx.org
+        - Key: Environment
+          Value: !Ref EnvironmentType
+        - Key: prx:cloudformation:stack-name
+          Value: !Ref AWS::StackName
+        - Key: prx:cloudformation:stack-id
+          Value: !Ref AWS::StackId
+      VpcId: !Ref VPC
+
+  SharedMemcachedSecurityGroup2:
+    Type: AWS::EC2::SecurityGroup
+    Condition: HasAlbSg # TODO
+    Properties:
+      GroupDescription: !Sub Shared ${EnvironmentType} memcached security group
+      SecurityGroupIngress:
         - IpProtocol: tcp
           FromPort: 11211
           SourceSecurityGroupId: !Ref AlbTargetInstanceSecurityGroupId
@@ -60,6 +78,7 @@ Resources:
         - Key: prx:cloudformation:stack-id
           Value: !Ref AWS::StackId
       VpcId: !Ref VPC
+
   SharedMemcachedCluster:
     Type: AWS::ElastiCache::CacheCluster
     Properties:
@@ -80,6 +99,7 @@ Resources:
       CacheSubnetGroupName: !Ref SharedMemcachedSubnetGroup
       VpcSecurityGroupIds:
         - !GetAtt SharedMemcachedSecurityGroup.GroupId
+        - !If [HasAlbSg, !GetAtt SharedMemcachedSecurityGroup2.GroupId, !Ref AWS::NoValue]
       Tags:
         - Key: Project
           Value: platform.prx.org
