--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -790,6 +790,10 @@ Resources:
           - IsStaging
           - !GetAtt SharedAlbStack.Outputs.TargetInstanceSecurityGroupId
           - !Ref AWS::NoValue
+        SharedVpcId: !If
+          - IsStaging
+          - !GetAtt SharedVpcStack.Outputs.VpcId
+          - !Ref AWS::NoValue
       Tags:
         - Key: prx:cloudformation:stack-name
           Value: !Ref AWS::StackName
