--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -786,14 +786,6 @@ Resources:
           Fn::ImportValue: !Sub ${NotificationsStackName}-OpsErrorMessagesSnsTopicArn
         EnvironmentType: !Ref EnvironmentType
         SourceSecurityGroupId1: !GetAtt ECSClusterStack.Outputs.ECSInstanceOutboundSecurityGroupId
-        AlbTargetInstanceSecurityGroupId: !If
-          - IsStaging
-          - !GetAtt SharedAlbStack.Outputs.TargetInstanceSecurityGroupId
-          - !Ref AWS::NoValue
-        SharedVpcId: !If
-          - IsStaging
-          - !GetAtt SharedVpcStack.Outputs.VpcId
-          - !Ref AWS::NoValue
       Tags:
         - Key: prx:cloudformation:stack-name
           Value: !Ref AWS::StackName
@@ -891,6 +883,31 @@ Resources:
       TemplateURL: !Sub https://${Constants.SourceBucketName}.s3.${AWS::Region}.amazonaws.com/${InfrastructureGitCommit}/stacks/shared-ecs-asg.yml
       TimeoutInMinutes: 5
 
+  NewSharedMemcachedStack:
+    Type: AWS::CloudFormation::Stack
+    Condition: IsStaging
+    Properties:
+      NotificationARNs:
+        - Fn::ImportValue: !Sub ${NotificationsStackName}-CloudFormationNotificationSnsTopic
+      Parameters:
+        VPC: !GetAtt SharedVpcStack.Outputs.VpcId
+        VPCSubnet1: !GetAtt SharedVpcStack.Outputs.PublicSubnet1Id
+        VPCSubnet2: !GetAtt SharedVpcStack.Outputs.PublicSubnet2Id
+        VPCSubnet3: !GetAtt SharedVpcStack.Outputs.PublicSubnet3Id
+        OpsWarnMessagesSnsTopicArn:
+          Fn::ImportValue: !Sub ${NotificationsStackName}-OpsWarnMessagesSnsTopicArn
+        OpsErrorMessagesSnsTopicArn:
+          Fn::ImportValue: !Sub ${NotificationsStackName}-OpsErrorMessagesSnsTopicArn
+        EnvironmentType: !Ref EnvironmentType
+        SourceSecurityGroupId1: !GetAtt SharedAlbStack.Outputs.TargetInstanceSecurityGroupId
+      Tags:
+        - Key: prx:cloudformation:stack-name
+          Value: !Ref AWS::StackName
+        - Key: prx:cloudformation:stack-id
+          Value: !Ref AWS::StackId
+      TemplateURL: !Sub https://${Constants.SourceBucketName}.s3.${AWS::Region}.amazonaws.com/${InfrastructureGitCommit}/stacks/shared-memcached.yml
+      TimeoutInMinutes: 40
+
   ProvisionedStack:
     Type: AWS::CloudFormation::Stack
     Condition: IsStaging
@@ -940,8 +957,8 @@ Resources:
         VpcPrivateSubnet1Id: !GetAtt SharedVpcStack.Outputs.PrivateSubnet1Id
         VpcPrivateSubnet2Id: !GetAtt SharedVpcStack.Outputs.PrivateSubnet2Id
         VpcPrivateSubnet3Id: !GetAtt SharedVpcStack.Outputs.PrivateSubnet3Id
-        SharedMemcachedEndpointAddress: !GetAtt SharedMemcachedStack.Outputs.CacheEndpointAddress
-        SharedMemcachedEndpointPort: !GetAtt SharedMemcachedStack.Outputs.CacheEndpointPort
+        SharedMemcachedEndpointAddress: !GetAtt NewSharedMemcachedStack.Outputs.CacheEndpointAddress
+        SharedMemcachedEndpointPort: !GetAtt NewSharedMemcachedStack.Outputs.CacheEndpointPort
       Tags:
         - Key: Environment
           Value: !Ref EnvironmentType
