--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -939,6 +939,9 @@ Resources:
         DovetailRouterEcrImageTag: !Ref DovetailRouterEcrImageTag
         DovetailRouterSecretsVersion: !Ref DovetailrouterSecretsVersion
 
+        IdEcrImageTag: !Ref IdEcrImageTag
+        IdSecretsVersion: !Ref IdSecretsVersion
+
         TemplateUrlPrefix: !Sub https://${Constants.SourceBucketName}.s3.${AWS::Region}.amazonaws.com/${InfrastructureGitCommit}/stacks/provisioned
         CloudFormationNotificationArn: !GetAtt Constants.CloudFormationNotificationArn
         AlbFullName: !GetAtt SharedAlbStack.Outputs.AlbFullName
@@ -959,6 +962,7 @@ Resources:
         VpcPrivateSubnet3Id: !GetAtt SharedVpcStack.Outputs.PrivateSubnet3Id
         SharedMemcachedEndpointAddress: !GetAtt NewSharedMemcachedStack.Outputs.CacheEndpointAddress
         SharedMemcachedEndpointPort: !GetAtt NewSharedMemcachedStack.Outputs.CacheEndpointPort
+        AmazonSesSmtpCredentialsGeneratorServiceToken: !GetAtt CustomResourcesStack.Outputs.AmazonSesSmtpCredentialsGeneratorServiceToken
       Tags:
         - Key: Environment
           Value: !Ref EnvironmentType
