--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -942,6 +942,9 @@ Resources:
         IdEcrImageTag: !Ref IdEcrImageTag
         IdSecretsVersion: !Ref IdSecretsVersion
 
+        RemixEcrImageTag: !Ref RemixEcrImageTag
+        RemixSecretsVersion: !Ref RemixSecretsVersion
+
         TemplateUrlPrefix: !Sub https://${Constants.SourceBucketName}.s3.${AWS::Region}.amazonaws.com/${InfrastructureGitCommit}/stacks/provisioned
         CloudFormationNotificationArn: !GetAtt Constants.CloudFormationNotificationArn
         AlbFullName: !GetAtt SharedAlbStack.Outputs.AlbFullName
