Fix listener rule

--- a/stacks/provisioned/remix.yml
+++ b/stacks/provisioned/remix.yml
@@ -40,7 +40,7 @@ Resources:
       Conditions:
         - Field: host-header
           Values:
-            - metrics.*
+            - remix.*
       ListenerArn: !Ref AlbHttpsListenerArn
       Priority: 642 # TODO
   DomainHostHeaderListenerRule:
