--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -945,6 +945,9 @@ Resources:
         RemixEcrImageTag: !Ref RemixEcrImageTag
         RemixSecretsVersion: !Ref RemixSecretsVersion
 
+        ExchangeEcrImageTag: !Ref ExchangeEcrImageTag
+        ExchangeSecretsVersion: !Ref ExchangeSecretsVersion
+
         TemplateUrlPrefix: !Sub https://${Constants.SourceBucketName}.s3.${AWS::Region}.amazonaws.com/${InfrastructureGitCommit}/stacks/provisioned
         CloudFormationNotificationArn: !GetAtt Constants.CloudFormationNotificationArn
         AlbFullName: !GetAtt SharedAlbStack.Outputs.AlbFullName
