Update Remix rule description

--- a/stacks/provisioned/remix.yml
+++ b/stacks/provisioned/remix.yml
@@ -296,7 +296,7 @@ Resources:
   WorkerScheduledRule:
     Type: AWS::Events::Rule
     Properties:
-      Description: Schedule the execution of the ECS task
+      Description: !Sub Periodically loads ${EnvironmentType} Remix episodes
       ScheduleExpression: rate(1 hour)
       State: ENABLED
       Targets:
