--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -948,6 +948,9 @@ Resources:
         ExchangeEcrImageTag: !Ref ExchangeEcrImageTag
         ExchangeSecretsVersion: !Ref ExchangeSecretsVersion
 
+        CastleEcrImageTag: !Ref CastleEcrImageTag
+        CastleSecretsVersion: !Ref CastleSecretsVersion
+
         TemplateUrlPrefix: !Sub https://${Constants.SourceBucketName}.s3.${AWS::Region}.amazonaws.com/${InfrastructureGitCommit}/stacks/provisioned
         CloudFormationNotificationArn: !GetAtt Constants.CloudFormationNotificationArn
         AlbFullName: !GetAtt SharedAlbStack.Outputs.AlbFullName
@@ -969,6 +972,7 @@ Resources:
         SharedMemcachedEndpointAddress: !GetAtt NewSharedMemcachedStack.Outputs.CacheEndpointAddress
         SharedMemcachedEndpointPort: !GetAtt NewSharedMemcachedStack.Outputs.CacheEndpointPort
         AmazonSesSmtpCredentialsGeneratorServiceToken: !GetAtt CustomResourcesStack.Outputs.AmazonSesSmtpCredentialsGeneratorServiceToken
+        EcsAsgOutboundTrafficSecurityGroupId: !GetAtt SharedEcsAsgStack.Outputs.OutboundTrafficSecurityGroupId
       Tags:
         - Key: Environment
           Value: !Ref EnvironmentType
