--- a/stacks/shared-ecs-asg.yml
+++ b/stacks/shared-ecs-asg.yml
@@ -331,3 +331,10 @@ Resources:
         - Base: 0
           Weight: 0
           CapacityProvider: !Ref DefaultCapacityProvider
+
+Outputs:
+  OutboundTrafficSecurityGroupId:
+    Description: >-
+      The group ID of the security group that allows all outbound traffic for
+      ECS ASG instances
+    Value: !GetAtt OutboundTrafficSecurityGroup.GroupId
