Turn off new Castle stack

--- a/stacks/provisioned.yml
+++ b/stacks/provisioned.yml
@@ -53,37 +53,37 @@ Parameters:
   CastleSecretsVersion: { Type: String }
 
 Resources:
-  CastleStack:
-    Type: AWS::CloudFormation::Stack
-    Properties:
-      NotificationARNs:
-        - !Ref CloudFormationNotificationArn
-      Parameters:
-        AlbFullName: !Ref AlbFullName
-        AlbHttpsListenerArn: !Ref AlbHttpsListenerArn
-        EcsClusterArn: !Ref EcsClusterArn
-        VpcId: !Ref VpcId
-        VpcPrivateSubnet1Id: !Ref VpcPrivateSubnet1Id
-        VpcPrivateSubnet2Id: !Ref VpcPrivateSubnet2Id
-        VpcPrivateSubnet3Id: !Ref VpcPrivateSubnet3Id
-        SecretsBase: !Ref SecretsBase
-        EcrImageTag: !Ref CastleEcrImageTag
-        SecretsVersion: !Ref CastleSecretsVersion
-        EcrRegion: !Ref EcrRegion
-        SecretsStackName: !Ref SecretsStackName
-        NotificationsStackName: !Ref NotificationsStackName
-        EnvironmentType: !Ref EnvironmentType
-        EnvironmentTypeAbbreviation: !Ref EnvironmentTypeAbbreviation
-        EcsAsgOutboundTrafficSecurityGroupId: !Ref EcsAsgOutboundTrafficSecurityGroupId
-      Tags:
-        - Key: Environment
-          Value: !Ref EnvironmentType
-        - Key: prx:cloudformation:stack-name
-          Value: !Ref AWS::StackName
-        - Key: prx:cloudformation:stack-id
-          Value: !Ref AWS::StackId
-      TemplateURL: !Sub ${TemplateUrlPrefix}/castle.yml
-      TimeoutInMinutes: 15
+  # CastleStack:
+  #   Type: AWS::CloudFormation::Stack
+  #   Properties:
+  #     NotificationARNs:
+  #       - !Ref CloudFormationNotificationArn
+  #     Parameters:
+  #       AlbFullName: !Ref AlbFullName
+  #       AlbHttpsListenerArn: !Ref AlbHttpsListenerArn
+  #       EcsClusterArn: !Ref EcsClusterArn
+  #       VpcId: !Ref VpcId
+  #       VpcPrivateSubnet1Id: !Ref VpcPrivateSubnet1Id
+  #       VpcPrivateSubnet2Id: !Ref VpcPrivateSubnet2Id
+  #       VpcPrivateSubnet3Id: !Ref VpcPrivateSubnet3Id
+  #       SecretsBase: !Ref SecretsBase
+  #       EcrImageTag: !Ref CastleEcrImageTag
+  #       SecretsVersion: !Ref CastleSecretsVersion
+  #       EcrRegion: !Ref EcrRegion
+  #       SecretsStackName: !Ref SecretsStackName
+  #       NotificationsStackName: !Ref NotificationsStackName
+  #       EnvironmentType: !Ref EnvironmentType
+  #       EnvironmentTypeAbbreviation: !Ref EnvironmentTypeAbbreviation
+  #       EcsAsgOutboundTrafficSecurityGroupId: !Ref EcsAsgOutboundTrafficSecurityGroupId
+  #     Tags:
+  #       - Key: Environment
+  #         Value: !Ref EnvironmentType
+  #       - Key: prx:cloudformation:stack-name
+  #         Value: !Ref AWS::StackName
+  #       - Key: prx:cloudformation:stack-id
+  #         Value: !Ref AWS::StackId
+  #     TemplateURL: !Sub ${TemplateUrlPrefix}/castle.yml
+  #     TimeoutInMinutes: 15
 
   DovetailRouterStack:
     Type: AWS::CloudFormation::Stack
